// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Tabs /> > renders a disabled tab 1`] = `
<div
  class="_container_47eddf"
  dir="ltr"
>
  <a
    class="_horizontalTabDisabled_47eddf"
  >
    One
  </a>
  <a
    class="_horizontalTab_47eddf"
  >
    Two
  </a>
</div>
`;

exports[`<Tabs /> > renders a tab with a href 1`] = `
<div
  class="_container_47eddf"
  dir="ltr"
>
  <a
    class="_horizontalTab_47eddf"
    href="//example"
  >
    One
  </a>
  <a
    class="_horizontalTab_47eddf"
  >
    Two
  </a>
</div>
`;

exports[`<Tabs /> > renders a tab with an onClick 1`] = `
<div
  class="_container_47eddf"
  dir="ltr"
>
  <a
    class="_horizontalTab_47eddf"
  >
    One
  </a>
  <a
    class="_horizontalTab_47eddf"
  >
    Two
  </a>
</div>
`;

exports[`<Tabs /> > renders an active tab 1`] = `
<div
  class="_container_47eddf"
  dir="ltr"
>
  <a
    aria-current="page"
    class="_horizontalTabActive_47eddf"
  >
    One
  </a>
  <a
    class="_horizontalTab_47eddf"
  >
    Two
  </a>
</div>
`;

exports[`<Tabs /> > renders basic tabs 1`] = `
<div
  class="_container_47eddf"
  dir="ltr"
>
  <a
    class="_horizontalTab_47eddf"
  >
    One
  </a>
  <a
    class="_horizontalTab_47eddf"
  >
    Two
  </a>
</div>
`;

exports[`<Tabs /> renders a disabled tab 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    class="horizontalTabDisabled"
  >
    One
  </a>
  <a
    class="horizontalTab"
  >
    Two
  </a>
</div>
`;

exports[`<Tabs /> renders a tab with a href 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    class="horizontalTab"
    href="//example"
  >
    One
  </a>
  <a
    class="horizontalTab"
  >
    Two
  </a>
</div>
`;

exports[`<Tabs /> renders a tab with an onClick 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    class="horizontalTab"
  >
    One
  </a>
  <a
    class="horizontalTab"
  >
    Two
  </a>
</div>
`;

exports[`<Tabs /> renders an active tab 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    aria-current="page"
    class="horizontalTabActive"
  >
    One
  </a>
  <a
    class="horizontalTab"
  >
    Two
  </a>
</div>
`;

exports[`<Tabs /> renders basic tabs 1`] = `
<div
  class="container"
  dir="ltr"
>
  <a
    class="horizontalTab"
  >
    One
  </a>
  <a
    class="horizontalTab"
  >
    Two
  </a>
</div>
`;
